--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>My first three.js app</title>
+    
     <link rel="stylesheet" href="../css/aboutme.css">
     <link rel="stylesheet" href="../css/header.css">
- 
+    <link rel="stylesheet" href="../css/preloader.css">
+
     <script type="module" src="../js/main.js"></script>
 </head>
 
 <body>
+    <div id="preloader"></div>
+
     <div id="headerContainer">
 
     </div>
@@ -22,6 +26,8 @@
 
     <script type="module" src="../js/main.js"></script>
     <script type="module" src="../js/aboutme.js"></script>
+    <script type="module" src="../js/preloader.js"></script>
+
     <script src="../js/header.js"></script>
 </body>
 </html>
