--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="view-transition" content="same-origin" />
+
   <link rel="stylesheet" type="text/css" href="css/homepage.css" />
   <link rel="stylesheet" type="text/css" href="css/header.css" />
-  
+  <link rel="stylesheet" href="/css/preloader.css">
 
   <script src="https://unpkg.com/gsap@3.9.0/dist/gsap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -21,6 +22,7 @@
 </head>
 
 <body>
+
   <div id="headerContainer"></div>
   
   
@@ -67,6 +69,10 @@
     </div>
   </div>
 
+  <script>
+
+  </script>
+  <script src="js/preloader.js"></script>
   <script src="js/cursor.js"></script>
   <script src="js/header.js"></script>
 </body>
