--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -19,7 +19,7 @@
             <div id="progress-bar"></div>
             <div id="progress-percent">0%</div>
         </div>
-    </div>a
+    </div>
 
     <div id="headerContainer">
 
