--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 </head>
 
 <body>
+  <div id="preloader">
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div id="progress-bar"></div>
+        <div id="progress-percent">0%</div>
+    </div>
+</div>
 
   <div id="headerContainer"></div>
   
