--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="view-transition" content="same-origin" />
-
+  <script type="module" src="../js/preloader.js"></script>
+  <link rel="stylesheet" href="/css/preloader.css">
   <link rel="stylesheet" type="text/css" href="css/homepage.css" />
   <link rel="stylesheet" type="text/css" href="css/header.css" />
-  <link rel="stylesheet" href="/css/preloader.css">
+
 
   <script src="https://unpkg.com/gsap@3.9.0/dist/gsap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
