--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -13,13 +13,7 @@
 </head>
 
 <body>
-    <div id="preloader">
-        <div id="loader-wrapper">
-            <div id="loader"></div>
-            <div id="progress-bar"></div>
-            <div id="progress-percent">0%</div>
-        </div>
-    </div>
+    <div id="preloader"></div>
 
     <div id="headerContainer">
 
