--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
       </div>
     </div>
 
-    <div class='card'>
+    <!-- <div class='card'>
       <div class='card-face'>
         <div class='cardName'>Services</div>
         <div class='cardText'><br> See what I have to offer. <br> Things for sale. <br> Things long sold.</div>
         <div class='card-art'></div>
       </div>
-    </div>
+    </div> -->
 
     <div class='card' onclick="window.location.href = 'pages/contactme.html';">
       <div class='card-face'>
