--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="view-transition" content="same-origin" />
-  <script type="module" src="/js/preloader.js"></script>
-  <link rel="stylesheet" href="/css/preloader.css" />
-  <link rel="stylesheet" type="text/css" href="/css/homepage.css" />
-  <link rel="stylesheet" type="text/css" href="/css/header.css" />
-  <link rel="stylesheet" type="text/css" href="/css/textbox.css" />
+  <script type="module" src="./js/preloader.js"></script>
+  <link rel="stylesheet" href="./css/preloader.css" />
+  <link rel="stylesheet" type="text/css" href="./css/homepage.css" />
+  <link rel="stylesheet" type="text/css" href="./css/header.css" />
+  <link rel="stylesheet" type="text/css" href="./css/textbox.css" /> 
 
-  <script type="module" src="/js/main.js"></script>
-  <script src="/js/csvloader.js"></script>
-  <script src="/js/dScriptLdr.js"></script>
-  <script src="/js/Welcome.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <script src="./js/csvloader.js"></script>
+  <script src="./js/dScriptLdr.js"></script>
+  <script src="./js/Welcome.js"></script>
 
   <script src="https://unpkg.com/gsap@3.9.0/dist/gsap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -259,17 +259,17 @@
 
 
   <script></script>
-  <script src="/js/listenhere.js"></script>
-  <script src="/js/preloader.js"></script>
-  <script src="/js/cursor.js"></script>
+  <script src="./js/listenhere.js"></script>
+  <script src="./js/preloader.js"></script>
+  <script src="./js/cursor.js"></script>
 
-  <script src="/js/header.js"></script>
-  <script src="/js/homepage.js"></script>
-  <script src="/js/aboutme.js"></script>
-  <script src="/js/csvloader.js"></script>
-  <script src="/js/dScriptLdr.js"></script>
-  <script src="/js/Welcome.js"></script>
-  <script type="module" src="/js/main.js"></script>
+  <script src="./js/header.js"></script>
+  <script src="./js/homepage.js"></script>    
+  <script src="./js/aboutme.js"></script>
+  <script src="./js/csvloader.js"></script>
+  <script src="./js/dScriptLdr.js"></script>
+  <script src="./js/Welcome.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 
