--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
 
   <div id="headerContainer"></div>
 
+  <div class="cardsrep">
+    <div class="cardrepindi" data-index="1"></div>
+    <div class="cardrepindi" data-index="2"></div>
+    <div class="cardrepindi" data-index="3"></div>
+    <div class="cardrepindi" data-index="4"></div>
+  </div>
+  
 
+<div class="imageoverlay2">
+  <div class="imageoverlaytext"></div>
+  <div class="imageoverlay"></div>
+</div>
 
 
   <!-- <div class="Gripper"> </div>
